AI-JADEDEVS4/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Materials_Due__c</fullName>
        <description>Date materials are due to publisher, tradeshow, webinar producer, etc...</description>
        <inlineHelpText>Date materials are due to publisher, tradeshow, webinar producer, etc...</inlineHelpText>
        <label>Materials Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NotAtted_Elq_Email_Template__c</fullName>
        <description>Link to the Eloqua Not Attended Email.</description>
        <inlineHelpText>Link to the Eloqua Not Attended Email.</inlineHelpText>
        <label>NotAtted Elq Email Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>On24_Event_Date__c</fullName>
        <description>This is a system field for ON24 to populate the date of the event to check if the event has passed. If it has they will use this to assign membership of attended/non-attended.</description>
        <inlineHelpText>This is a system field for ON24 to populate the date of the event to check if the event has passed. If it has they will use this to assign membership of attended/non-attended.</inlineHelpText>
        <label>On24 Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On24_Event_ID_Fix__c</fullName>
        <formula>IF ( StartDate  &lt;= TODAY()-1, &quot;&quot;, On24_Event_ID__c)</formula>
        <label>On24 Event ID Fix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On24_Event_ID__c</fullName>
        <description>On24 Event ID will need to be provided to match the integration between On24 and SFDC. Only use this when creating a campaign for On24.</description>
        <inlineHelpText>On24 Event ID will need to be provided to match the integration between On24 and SFDC. Only use this when creating a campaign for On24.</inlineHelpText>
        <label>On24 Event ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Rate__c</fullName>
        <description>Campaign Opens divided by Num Sent.  Used to determine the rate at which recipients of a marketing message actually opened the email or equivalent action.</description>
        <formula>Campaign_Opens__c  /  Email_Received__c</formula>
        <inlineHelpText>Campaign Opens divided by Email Received.  Used to determine the rate at which recipients of a marketing message actually opened the email or equivalent action.</inlineHelpText>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_AP_Staff__c</fullName>
        <label>Other AP Staff</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Assets_Link__c</fullName>
        <label>Other Assets Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Other_Segment__c</fullName>
        <label>Other Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_2_Company__c</fullName>
        <label>Partner 2 Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Logo__c</fullName>
        <label>Partner 2 Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2_Speaker_Name__c</fullName>
        <label>Partner 2 Speaker Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Company__c</fullName>
        <description>Partner&apos;s company name</description>
        <inlineHelpText>Partner&apos;s company name</inlineHelpText>
        <label>Partner: Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Description__c</fullName>
        <label>Partner Description</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_HTML_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Local Event Work Task</description>
        <inlineHelpText>Partner HTML Email has been created. This is updated by the Campaign Owner.</inlineHelpText>
        <label>Partner HTML Sent (Optional)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Local_Event_Link_2__c</fullName>
        <formula>IF( ISBLANK(Partner_2_Company__c),&quot;No Partner Link Required&quot;,&quot;http://www.adaptiveinsights.com/in-person-events/event-registration/&quot;+
IF(ISBLANK(Website_Event_ID__c),&quot;NO WEBSITE ID&quot;,Website_Event_ID__c)+&quot;?prl=&quot;+SUBSTITUTE(Partner_2_Company__c, &quot; &quot;, &quot;-&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Local Event Link 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Local_Event_Link__c</fullName>
        <formula>IF( ISBLANK(Partner_Company__c),&quot;No Partner Link Required&quot;,&quot;http://www.adaptiveinsights.com/in-person-events/event-registration/&quot;+
IF(ISBLANK(Website_Event_ID__c),&quot;NO WEBSITE ID&quot;,Website_Event_ID__c)+&quot;?prl=&quot;+SUBSTITUTE(Partner_Company__c, &quot; &quot;, &quot;-&quot;))</formula>
        <label>Partner Local Event Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Logo__c</fullName>
        <label>Partner Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Speaker_Name__c</fullName>
        <description>Full name of partner that is speaking</description>
        <inlineHelpText>Full name of partner that is speaking</inlineHelpText>
        <label>Partner: Speaker Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_TML__c</fullName>
        <inlineHelpText>What&apos;s the official AP TML Plan</inlineHelpText>
        <label>Plan TML</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Follow_Up_CS_SFDC_ID__c</fullName>
        <formula>Post_Follow_Up_Case_Study__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Follow-Up CS SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Follow_Up_Case_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Post Webinar Follow-up Case Study</description>
        <inlineHelpText>Lookup to Post Webinar Follow-up Case Study</inlineHelpText>
        <label>Post Follow-Up Case Study</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Post Follow-Up Case Study)</relationshipLabel>
        <relationshipName>Campaigns6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Follow_Up_Paper_SFDC_ID__c</fullName>
        <formula>Post_Follow_Up_Paper__r.Id</formula>
        <label>Post Follow-Up Paper SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Follow_Up_Paper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Post Webinar Follow-up Research Paper</description>
        <inlineHelpText>Lookup to Post Webinar Follow-up Research Paper</inlineHelpText>
        <label>Post Follow-Up Paper</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Post Follow-Up Paper)</relationshipLabel>
        <relationshipName>Campaigns5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Follow_Up_Video_SFDC_ID__c</fullName>
        <formula>Post_Follow_Up_Video__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Follow-Up Video SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Follow_Up_Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Post Webinar Follow-up Video</description>
        <inlineHelpText>Lookup to Post Webinar Follow-up Video</inlineHelpText>
        <label>Post Follow-Up Video</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Post Follow-Up Video)</relationshipLabel>
        <relationshipName>Campaigns7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Press_Release_Due_Date__c</fullName>
        <description>When does the Press Release need to be deployed</description>
        <label>Press Release Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Press_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Check if a press release is needed</inlineHelpText>
        <label>Press Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Page_Update_Due_Date__c</fullName>
        <description>When do the changes to the product page need to be live by</description>
        <label>Product Page Update Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Page_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Check if a product page needs to be updated</inlineHelpText>
        <label>Product Page Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Titles__c</fullName>
        <label>Product-Titles</label>
        <picklist>
            <picklistValues>
                <fullName>Planning - CFO, Controller, FP&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation - CFO, Controller, Acct&apos;g</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery - IT, Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Connect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Tested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MarOps fields item has been QA&apos;d</description>
        <inlineHelpText>MarOps fields item has been QA&apos;d. This field is updated by Marketing Ops.</inlineHelpText>
        <label>QA/Tested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R1_Email_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MarOps Check List</description>
        <inlineHelpText>The email for round 1 has been created. This field is updated by the Campaign Owner.</inlineHelpText>
        <label>R1 Email Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R2_Elq_Campaign_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MarOps Check List</description>
        <inlineHelpText>Round 2 campaign has been created in Eloqua. This field is updated by the Marketing Ops.</inlineHelpText>
        <label>R2 Elq Campaign Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R2_Elq_Campaign_Link__c</fullName>
        <description>Link to the Round 2,3 and Date of Reminder Webinar Campaign</description>
        <inlineHelpText>Link to the Round 2,3 and Date of Reminder Webinar Campaign</inlineHelpText>
        <label>R2 Elq Campaign Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>R2_Emails_2_3_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MarOps Check List</description>
        <inlineHelpText>Emails 2 and/or 3 have been created in Eloqua. This is updated by the Campaign Owner.</inlineHelpText>
        <label>R2 Emails 2-3 Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R2_Segment_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MarOps Check List</description>
        <inlineHelpText>Round 2 segment has been created in Eloqua. This is updated by Marketing Ops.</inlineHelpText>
        <label>R2 Segment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Email_Address__c</fullName>
        <description>Email address of Regional Manager</description>
        <label>RM Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RM_Phone_Number__c</fullName>
        <description>Phone number of regional manager</description>
        <inlineHelpText>Phone number of regional manager</inlineHelpText>
        <label>RM Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field of RM</description>
        <inlineHelpText>Look up field of RM</inlineHelpText>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SG_New_Additions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG: New Additions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SG_No_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG: No Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SG_Open_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG: Open-Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SG_Open_No_Click__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG: Open-No Click</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SG_Open_No_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG: Open-No Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SG_Reg_Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG: Reg-Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SG_Reg_UnEngaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG: Reg-UnEngaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMB_AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMB AVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_2_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Partner 2 Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Sales Partner 2 Contact)</relationshipLabel>
        <relationshipName>Campaigns_Sales2_Partner_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Partner 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The account is not a Partner or Partner &amp; Customer</errorMessage>
            <filterItems>
                <field>Account.Account_Status__c</field>
                <operation>equals</operation>
                <value>Partner &amp; Customer, Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Sales Partner 2)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns_Sales_Partner_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Partner which referred customer to us. Same name in Leads &amp; Opportunities.</description>
        <label>Sales Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Account_Status__c</field>
                <operation>equals</operation>
                <value>Partner &amp; Customer, Partner, Partner Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_Count__c</fullName>
        <description>Count in Segment before sending</description>
        <inlineHelpText>Count in Segment before sending</inlineHelpText>
        <label>Segment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checklist</description>
        <inlineHelpText>The Segment has been created in Eloqua. This is updated by Marketing Ops.</inlineHelpText>
        <label>Segment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_Instructions__c</fullName>
        <label>Segment Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sending_Segment__c</fullName>
        <description>Intended audience for this email send</description>
        <inlineHelpText>Intended audience for this email send</inlineHelpText>
        <label>Sending Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Customers/Partners - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers/Partners - Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers/Partners - MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers/Partners - Select Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers - AU-NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers - Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers - MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers - Select Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers - UK-IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None - 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners &amp; Potential Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners - Select Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - All (LS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - All (TL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - AU (All)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - AU (Local)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Consolidations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Consolidations (LS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Consolidations (TL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Discovery (LS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Discovery (TL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Enterprise (LS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Enterprise (TL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects - Exclude Vertical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SetUp_Detail_Note__c</fullName>
        <description>Record any detail notes, for the marketing team, about the campaign here</description>
        <label>SetUpDetail Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shared_List_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checkbox</description>
        <inlineHelpText>Shared List in Eloqua has been created and the ID number has been documented.</inlineHelpText>
        <label>Shared List Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Campaign_ID__c</fullName>
        <formula>Social_Campaign__c</formula>
        <label>Social Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to social campaign</description>
        <inlineHelpText>Lookup to social campaign</inlineHelpText>
        <label>Social Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Social Campaign)</relationshipLabel>
        <relationshipName>Campaigns4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Image_File__c</fullName>
        <description>URL to source image file</description>
        <inlineHelpText>URL to source image file</inlineHelpText>
        <label>Source Image File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Speaker_2_Company_Name__c</fullName>
        <description>Company name of speaker 2</description>
        <inlineHelpText>Company name of speaker 2</inlineHelpText>
        <label>Speaker 2: Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_2_Full_Name__c</fullName>
        <description>Full name of speaker 2</description>
        <inlineHelpText>Full name of speaker 2</inlineHelpText>
        <label>Speaker 2: Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Notes_for_Analyst_RM__c</fullName>
        <description>Special Notes for Analyst, RM, etc</description>
        <inlineHelpText>Special Notes for Analyst, RM, etc</inlineHelpText>
        <label>Special Notes for Analyst-RM</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Approved_2_Launch_R2__c</fullName>
        <description>Date/Time stamp when status changes to Approved 2 Launch R2</description>
        <inlineHelpText>Date/Time stamp when status changes to Approved 2 Launch R2</inlineHelpText>
        <label>Status: Approved 2 Launch R2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Approved_2_Launch__c</fullName>
        <description>Date/Time stamp when status changes to Approved 2 Launch</description>
        <inlineHelpText>Date/Time stamp when status changes to Approved 2 Launch</inlineHelpText>
        <label>Status: Approved 2 Launch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Data_Uploaded__c</fullName>
        <description>Date/Time stamp when status changes to Data Uploaded</description>
        <inlineHelpText>Date/Time stamp when status changes to Data Uploaded</inlineHelpText>
        <label>Status: Data Uploaded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Detailed_Approved__c</fullName>
        <description>Date/Time stamp when status changes to Detail Approved</description>
        <inlineHelpText>Date/Time stamp when status changes to Detail Approved</inlineHelpText>
        <label>Status: Detailed Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Details_Approved_R2__c</fullName>
        <description>Date/Time stamp when status changes to Details Approved R2</description>
        <inlineHelpText>Date/Time stamp when status changes to Details Approved R2</inlineHelpText>
        <label>Status: Details Approved R2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Dynamic_Content_Created__c</fullName>
        <description>MarOps date/time stamp when Dynamic Content checked</description>
        <inlineHelpText>MarOps date/time stamp when Dynamic Content checked</inlineHelpText>
        <label>Status: Dynamic Content Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Elq_Campaign_Created__c</fullName>
        <description>MarOps date/time stamp when Elq Campaign created checked</description>
        <inlineHelpText>MarOps date/time stamp when Elq Campaign created checked</inlineHelpText>
        <label>Status: Elq Campaign Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Email_1_Created__c</fullName>
        <description>MarOps date/time stamp when Email #1 created checked</description>
        <inlineHelpText>MarOps date/time stamp when Email #1 created checked</inlineHelpText>
        <label>Status: Email #1 Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Email_1_Sent_4_Approval__c</fullName>
        <description>MarOps date/time stamp when Email #1 sent for approval checked</description>
        <inlineHelpText>MarOps date/time stamp when Email #1 sent for approval checked</inlineHelpText>
        <label>Status: Email #1 Sent 4 Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Emails_2_3_created__c</fullName>
        <description>MarOps date/time stamp when Email #2 &amp; #3 created checked</description>
        <inlineHelpText>MarOps date/time stamp when Email #2 &amp; #3 created checked</inlineHelpText>
        <label>Status: Emails 2-3 created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Form_Processor_Created__c</fullName>
        <description>MarOps date/time stamp when Form processor Step created checked</description>
        <inlineHelpText>MarOps date/time stamp when Form processor Step created checked</inlineHelpText>
        <label>Status: Form Processor Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_ICS_Tested__c</fullName>
        <description>MarOps date/time stamp when ICS Tested checkbox checked</description>
        <inlineHelpText>MarOps date/time stamp when ICS Tested checkbox checked</inlineHelpText>
        <label>Status: ICS Tested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_In_Production_Post__c</fullName>
        <description>Date/Time stamp when status changes to In Production Post Webinar</description>
        <inlineHelpText>Date/Time stamp when status changes to In Production Post Webinar</inlineHelpText>
        <label>Status: In Production Post</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_In_Production_R2__c</fullName>
        <description>Date/Time stamp when status changes to In Production R2</description>
        <inlineHelpText>Date/Time stamp when status changes to In Production R2</inlineHelpText>
        <label>Status: In Production R2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_In_Production__c</fullName>
        <description>Date/Time stamp when status changes to In Production</description>
        <inlineHelpText>Date/Time stamp when status changes to In Production</inlineHelpText>
        <label>Status: In Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Partner_Email_Sent__c</fullName>
        <description>MarOps date/time stamp when Partner HTML created &amp; sent checked</description>
        <inlineHelpText>MarOps date/time stamp when Partner HTML created &amp; sent checked</inlineHelpText>
        <label>Status: Partner Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Planning__c</fullName>
        <description>Date/Time stamp when the campaign status is changed to Planned</description>
        <inlineHelpText>Date/Time stamp when the campaign status is changed to Planned</inlineHelpText>
        <label>Status: Planning</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_QA_Test_Post__c</fullName>
        <description>Date/Time stamp when status changes to QA/Test Post Webinar</description>
        <inlineHelpText>Date/Time stamp when status changes to QA/Test Post Webinar</inlineHelpText>
        <label>Status: QA Test Post</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_QA_Test_R2__c</fullName>
        <description>Date/Time stamp when status changes to QA/Tested R2</description>
        <inlineHelpText>Date/Time stamp when status changes to QA/Tested R2</inlineHelpText>
        <label>Status: QA Test R2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_QA_Test__c</fullName>
        <description>Date/Time stamp when status changes to QA/Tested</description>
        <inlineHelpText>Date/Time stamp when status changes to QA/Tested</inlineHelpText>
        <label>Status: QA Test</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Ready_for_Review__c</fullName>
        <description>Date/Time stamp when campaign status changes to Ready for Review</description>
        <inlineHelpText>Date/Time stamp when campaign status changes to Ready for Review</inlineHelpText>
        <label>Status: Ready for Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Running_Post__c</fullName>
        <description>Date/Time stamp when status changes to Running Post Webinar</description>
        <inlineHelpText>Date/Time stamp when status changes to Running Post Webinar</inlineHelpText>
        <label>Status: Running Post</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Running_R2__c</fullName>
        <description>Date/Time stamp when status changes to Running R2</description>
        <inlineHelpText>Date/Time stamp when status changes to Running R2</inlineHelpText>
        <label>Status: Running R2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Running__c</fullName>
        <description>Date/Time stamp when the status changes to Running</description>
        <inlineHelpText>Date/Time stamp when the status changes to Running</inlineHelpText>
        <label>Status: Running</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Segment_Created__c</fullName>
        <description>MarOps date/time stamp when Segment created checked</description>
        <inlineHelpText>MarOps date/time stamp when Segment created checked</inlineHelpText>
        <label>Status: Segment Created</label>
        <type>DateTime</type>
    </fields>
</CustomObject>